--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
   <script>
     countButton.addEventListener('click', () => {
-      console.log(textarea)
+      const r = textarea.value.split(" ").lenght;
+        result.innerText = r;
     });
   </script>
 </body>
