--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <script>
     countButton.addEventListener('click', () => {
-      const r = textarea.value.split(" ").lenght;
+      const r = textarea.value.split(" ").length;
         result.innerText = r;
     });
   </script>
