--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Words counter</h1>
-  <textarea id="textArea"></textarea>
-  <div class="flex">
-    <button id="countButton">Count</button>
-    <select name="unitToCount" id="unitToCount">
-      <option value="words" selected>Words</option>
-      <option value="characters">Characters</option>
-      <option value="letters">Letters</option>
-      <option value="sentences">Senteces</option>
-      <option value="paragraphs">Paragraphs / Lines</option>
-
-    </select>
-    <p>Result: <span id="result"> - </span></p>
-  </div>
-  <script type="module" src="./script.js"></script>
+  <main>
+    <h1>Words counter</h1>
+    <textarea id="textArea"></textarea>
+    <div class="flex">
+      <button id="countButton">Count</button>
+      <select name="unitToCount" id="unitToCount">
+        <option value="words" selected>Words</option>
+        <option value="characters">Characters</option>
+        <option value="letters">Letters</option>
+        <option value="sentences">Senteces</option>
+        <option value="paragraphs">Paragraphs / Lines</option>
+  
+      </select>
+      <p>Result: <span id="result"> - </span></p>
+    </div>
+    <script type="module" src="./script.js"></script>
+  </main>
 </body>
 </html>
