added new feature and readme

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <option value="letters">Letters</option>
         <option value="sentences">Senteces</option>
         <option value="paragraphs">Paragraphs / Lines</option>
+        <option value="whitespaces">Whitespaces</option>
   
       </select>
       <p>Result: <span id="result"> - </span></p>
