--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
   <main>
     <h1>Words counter</h1>
-    <textarea id="textArea"></textarea>
+    <textarea id="textArea">Starting at $4/mo
+      We offer a wide range of shared and dedicated vCPU Droplets.
+      Connect with SSH or our in-app console.
+      Manage backups, snapshots, and deploy custom images.
+      Monitor performance metrics</textarea>
     <div class="flex">
       <button id="countButton">Count</button>
       <select name="unitToCount" id="unitToCount">
@@ -20,6 +24,7 @@
         <option value="sentences">Senteces</option>
         <option value="paragraphs">Paragraphs / Lines</option>
         <option value="whitespaces">Whitespaces</option>
+        <option value="all">All symbols</option>
   
       </select>
       <p>Result: <span id="result"> - </span></p>
